Bug 53839 - CRASH when insert row in particular document
Summary: CRASH when insert row in particular document
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.2 rc
Hardware: x86-64 (AMD64) All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:3.6.2 target:3.7.0
Keywords: regression
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2012-08-20 12:14 UTC by B.J. Herbison
Modified: 2012-09-01 17:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
WinDbg output from crash with Version 3.7.0.0.alpha0+ (Build ID: 817bd92), no symbols. (34.77 KB, text/plain)
2012-08-22 14:38 UTC, B.J. Herbison
Details
Opened the file, navigated to a location, clicked on a cell, typed control-C, went to another window. A few minutes later this crash happened. (41.57 KB, text/plain)
2012-08-22 20:36 UTC, B.J. Herbison
Details
Backtrace from insert row crash (45.34 KB, text/plain)
2012-08-25 13:12 UTC, B.J. Herbison
Details
Failure to start when I debug my private build (34.76 KB, text/plain)
2012-08-25 13:12 UTC, B.J. Herbison
Details
Thanks to Rainer Bielefeld, a document that crashes when you insert a line at row 9 of the Main or Work sheets (698.94 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-08-28 23:55 UTC, B.J. Herbison
Details
gdb stack trace from failure with 3.7 (504.14 KB, text/x-log)
2012-08-29 09:11 UTC, B.J. Herbison
Details

Note You need to log in before you can comment on or make changes to this bug.
Description B.J. Herbison 2012-08-20 12:14:14 UTC
Just updated to 3.6.0.2 on Ubuntu 12.04. Software center says the version is libreoffice-calc 1:3.6.0~rc4-oubuntu3~ppa1~precise1

Open an existing spreadsheet, select a line, right-click, insert. After a short delay the window goes away and Ubuntu gives be a "crashed program" report.

The spreadsheet has 46509 rows. Inserting a row at the end works, the three tries I made before the end all crashed. I started the program from the command line and no relevant information was displayed.

I'd rather not provide the spreadsheet, it contains private information.

Please let me know how I can help debug this problem.
Comment 1 Julien Nabet 2012-08-20 21:57:23 UTC
On pc Debian x86-64 with 3.6 sources updated some days ago, I don't reproduce the problem.

Do you reproduce the problem with a brand new file or just with this specific file?
If just this one or some others, could you attach the smallest file (in size) so we can try to reproduce this behaviour?
Comment 2 B.J. Herbison 2012-08-21 12:31:51 UTC
I updated my Windows 7 box to LibreOffice Version 3.6.0.4 (Build ID: 932b512) and that version crashes on the same file.

I have spent well over an hour trying to create an alternative file. The result were several files that didn't cause a crash, and many crashes when trying to modify the file.

The problem might be related to conditional formatting, since when I copy sheets to experiment the conditional formatting is not copied. (Bug 53207, reported to be fixed in 3.7.) The problem might also be relate to formulas that link between sheets, or the number of rows I have in the file.

Is there a way to get a debug version of 3.6, for either Windows 7 or Ubuntu, so I can get a stack trace to report?
Comment 3 Julien Nabet 2012-08-21 13:22:20 UTC
B.J. Herbison: there's daily nightly builds with symbols here http://dev-builds.libreoffice.org/daily/W2008R2@20-With-Symbol-Bytemark-Hosting/master/current/
This link could help too: http://wiki.documentfoundation.org/BugReport#How_to_get_backtrace_.28on_WINDOWS.29
Comment 4 B.J. Herbison 2012-08-22 14:38:49 UTC
Created attachment 65964 [details]
WinDbg output from crash with Version 3.7.0.0.alpha0+ (Build ID: 817bd92), no symbols.
Comment 5 B.J. Herbison 2012-08-22 20:36:47 UTC
Created attachment 65980 [details]
Opened the file, navigated to a location, clicked on a cell, typed control-C, went to another window. A few minutes later this crash happened.

Where can I get the symbol files for this build so I can give a better trace?
Comment 6 Julien Nabet 2012-08-22 21:05:09 UTC
B.J. Herbison: sorry, I was wrong. I read http://wiki.documentfoundation.org/How_to_get_a_backtrace_with_WinDbg in details and for the moment, there's no "ready to download" a build with symbols.

For the moment, meanwhile this tracker https://bugs.freedesktop.org/show_bug.cgi?id=50350 isn't solved, you can build LO yourself and enable symbols.
Comment 7 B.J. Herbison 2012-08-23 23:55:13 UTC
(In reply to comment #6)
> B.J. Herbison: sorry, I was wrong. I read
> http://wiki.documentfoundation.org/How_to_get_a_backtrace_with_WinDbg in
> details and for the moment, there's no "ready to download" a build with
> symbols.
> 
> For the moment, meanwhile this tracker
> https://bugs.freedesktop.org/show_bug.cgi?id=50350 isn't solved, you can build
> LO yourself and enable symbols.

I've tried building, but the documentation isn't clear. I asked three questions on two talk pages in the wiki. Is there a better forum to ask for clarification of the wiki?

Alternatively, is there another place that give build instructions?

The pages with my questions:

https://wiki.documentfoundation.org/Talk:Development/Native_Build

https://wiki.documentfoundation.org/Talk:Development/Linux_Build_Dependencies
Comment 8 Julien Nabet 2012-08-24 07:24:37 UTC
The main page is http://wiki.documentfoundation.org/Development/Native_Build

For Windows, there is this specific link too:
http://wiki.documentfoundation.org/Development/Windows_Build_Dependencies

There's the dev irc channel here:
#libreoffice-dev
on freenode.net

and dev forum here:
http://nabble.documentfoundation.org/Dev-f1639786.html
Comment 9 Julien Nabet 2012-08-24 11:08:37 UTC
Reading comment 3, I had in mind you were only on Windows but I had forgotten you also had Ubuntu.

Do you have lo-menubar installed? If yes, could you try to reproduce without lo-menubar?

BTW, retrieving bt on Linux is much more easier, see http://wiki.documentfoundation.org/BugReport#How_to_get_backtrace_.28on_Linux.29
There's a package for debug symbols so no need to build.
However, if you want to, building on Linux is much more easier too by following the same Native build page + http://wiki.documentfoundation.org/Development/Linux_Build_Dependencies
Comment 10 B.J. Herbison 2012-08-25 13:11:42 UTC
(In reply to comment #9)
> 
> Do you have lo-menubar installed? If yes, could you try to reproduce without
> lo-menubar?

I don't recall lo-menubar. Tools/Extension Manaher shows no extensions, is that where lo-menubar would show up?

> BTW, retrieving bt on Linux is much more easier, see

Thank you. I followed those instructions and now have a backtrace. I will attach the dgb output.


I also have successes and failures from building my own version. I built a debug verion--I am able to start it, display and edit spreadsheets, and reproduce the crash. However, when I run my version using gdb it displays the splash screen, the splash screen goes away, and then it crashes before displaying the start page. I will also attach that gdb output.

(I would be glad to figure out what I did wrong in creating or debugging my own build, but that is much less important than fixing the libreoffice crash that prevents me from using my spreadsheet.)
Comment 11 B.J. Herbison 2012-08-25 13:12:17 UTC
Created attachment 66106 [details]
Backtrace from insert row crash
Comment 12 B.J. Herbison 2012-08-25 13:12:56 UTC
Created attachment 66107 [details]
Failure to start when I debug my private build
Comment 13 Rainer Bielefeld Retired 2012-08-27 03:39:30 UTC
Currently I see a crash with an obsolete version for unknown document, that's not critical.

@B.J. Herbison
We need a sample document.
What is your result with current version 3.6.1.2?
Comment 14 B.J. Herbison 2012-08-27 10:22:34 UTC
(In reply to comment #13)
> Currently I see a crash with an obsolete version for unknown document, that's
> not critical.

It seems unfair to call 3.6.0 obsolete when that is the version offered on https://www.libreoffice.org/download/.

> @B.J. Herbison
> We need a sample document.

I sent you an e-mail to the LibreOffice at bielefeldundbuss.de.

> What is your result with current version 3.6.1.2?

Where can I find instructions on how to download a copy of 3.6.1.2 and get a backtrace from it? Preferably Ubuntu, but Windows 7 would also work.

(I tried to Google and got many hits, but none I looked at were clear and complete instructions on getting a backtrace.)
Comment 15 Rainer Bielefeld Retired 2012-08-27 10:47:23 UTC
(In reply to comment #14)

> Where can I find instructions on how to download a copy of 3.6.1.2 and get a
> backtrace from it? 

Hi,

Thank you very much for your report and for your patience.

As a first step it would be sufficient that you check whether the problem still exists in 3.6.1.2. If it has gone, we can save a lot of work. For example, this one might be a DUP of "Bug 50679 - EDITING: Copying cell(s) with conditional formatting CRASH when paste" or a side effect of an other known bug? Most volunteers here can get very few info from a Backtrace, but know lots of bugs and can find relations, if they exist.

With a sample document we also have the possibility to test with what version the bug appeared (for example <https://wiki.documentfoundation.org/Bibisect>), what also eases work for developers.

I often replace all characters in a document by a "i", so personal info is deleted, and most times the document still can be used to reproduce the bug.

If that's not possible, may be you can agree to send your document by e-mail to me? If I can reproduce the bug, i should be able to create a a new completely new document without your data and delete your document afterwards.

If the problem persists and it is plausible that your problem is no already known, your 3.6.0.2 backtraces are ok, no new ones will be required.
Generally my experience is that backtraces are very valuable for bugs what are difficult to reproduce, developers can get hints for an approach to the bug. For bugs what can be reproduced easily developers will reproduce the bug using their own debug tools and might not invest time to read information in backtraces.

Best regards

Rainer
Comment 16 Markus Mohrhard 2012-08-27 10:50:09 UTC
No need for a more detailed backtrace. The two show me already that is another case of the broadcaster lifetime problem. I just need to find some time to look into it. Please attach a test document as Rainer requested to make it possible to check that the fix will also cover your problem.
Comment 17 B.J. Herbison 2012-08-27 11:32:35 UTC
Document and information provided to developers via e-mail. Thank you for your assistance.
Comment 18 Rainer Bielefeld Retired 2012-08-27 12:17:07 UTC
As a by-product of creating a document without confidential contents I found out that Bug is
[Reproducible] with "LibreOffice 3.6.1.2  German UI/Locale [Build-ID:  e29a214] on German WIN7 Home Premium (64bit). 
Still [Reproducible] with parallel installation of Master "LOdev  3.7.0.0.alpha0+   -  ENGLISH UI [Build ID: 6900781]"  {tinderbox: 2008R2@20, pull time 2012-08-25 21:36:16} on WIN7 Home Premium (64bit)

Still Worked fine with 
Server installation of Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 7175cee]" (tinderbox: Win-x86@6-fast, pull time 2012-05-16 22:07:37)

With 3.6.1.2 document also crashes when I replace all characters in all tables by "i" (using regular expressions) and deleting a column
Comment 19 Not Assigned 2012-08-28 08:47:08 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9f14fa5f5f6c6edd596a0bfaa9a24facb5c6d83f&g=libreoffice-3-6

don't crash for invalid repaint ranges in cond formats, fdo#53839


It will be available in LibreOffice 3.6.2.
Comment 20 Not Assigned 2012-08-28 13:34:49 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=309b4e24d2507a93a0825dff2a6df13859e9487e

don't crash for invalid repaint ranges in cond formats, fdo#53839
Comment 21 Markus Mohrhard 2012-08-28 14:23:12 UTC
Bug is fixed.

Just a small comment, your file contains a betwenn(0,0) that is most likely caused by Libreoffice 3.6.1

Thanks for your bug report and please test with a 3.6.2 build to check that it is correctly fixed.
Comment 22 B.J. Herbison 2012-08-28 23:55:24 UTC
Created attachment 66253 [details]
Thanks to Rainer Bielefeld, a document that crashes when you insert a line at row 9 of the Main or Work sheets
Comment 23 Rainer Bielefeld Retired 2012-08-29 07:24:13 UTC
Fix VREIFIED with source document of attachment 66253 [details] and unzipped Master Build  "LOdev 3.7.0.0.alpha0+  ENGLISH UI  [Build ID: 9ca3b53]" (tinderbox:W2008R2@20, pull time 2012-08-28 21:50:05) // WIN7 Home Premium (64bit). 
Also the crash problem when replacing all characters has gone, might have been related.
Comment 24 B.J. Herbison 2012-08-29 09:11:50 UTC
Created attachment 66268 [details]
gdb stack trace from failure with 3.7

I am still waiting for a developer build of 3.6.2 to test (although I have not checked today).

I edited the one line change from comment 19 into my 3.7 source (snapshot of a few days ago) and the resulting program crashed when I attempted to insert a row. Either the issue is not totally fixed, or additional changes are needed in the context of 3.7.

Attached is the gdb output from that crash with 3.7 and the one line change from comment 19.
Comment 25 Rainer Bielefeld Retired 2012-08-29 09:19:41 UTC
(In reply to comment #24)
> Either the issue is not totally fixed, or additional changes are needed in
> the context of 3.7.

Or the fix only brings 100% effect with other fixes what have been introduced in between? I would await a complete new source for further tests (although I think that you suspect is not baseless).
Comment 26 Markus Mohrhard 2012-08-29 11:20:07 UTC
You're still using a build without the fix. As I mentionend, grap a build on Thursday and have a look then.
Comment 27 B.J. Herbison 2012-08-31 12:38:01 UTC
(In reply to comment #26)
> You're still using a build without the fix. As I mentionend, grap a build on
> Thursday and have a look then.

I tried with Version 3.6.2.0+ (Build ID: c3148ae). The first attempt to insert a link in my spreadsheet crashed LibreOffice.

I don't have a reproducible crash--later attempts to insert lines did not crash, but none of them finished. I let one attempt run for 30 minutes. Are the nightly builds massively slower than standard builds?

I didn't get any crashes with the attached sample file. It also inserted rows faster -- a couple of attempts completed in between five and ten minutes. It's also a simpler file, the character changes mean that most of the conditional formatting doesn't have any effect.
Comment 28 B.J. Herbison 2012-09-01 17:23:19 UTC
Some earlier comments mentioned that Conditional Formatting might be to blame. but it doesn't appear to be. I removed all conditional formatting from every sheet with Formatting/Conditional Formatting/Manage and row inserts on unmodified 3.6 still caused the crash.

How much slower is the daily build than a release build? On 3.5 it takes 2 seconds CPU seconds (times from ps) to insert a row, 4 CPU second to undo the insert. With the daily build of 3.6 it takes 75 CPU seconds to insert the row, 85 CPU seconds to undo the insert.