don't crash for invalid repaint ranges in cond formats, fdo#53839

Change-Id: I83cbb2574849c69fba3ca315d7507358654ff2b9